# youtube-downloader

./: .gitignore  .prettierignore  CLAUDE.md  CONTEXT.md  DESIGN-BRIEF.md  README.md  eslint.config.js  index.html  package-lock.json  package.json  pnpm-lock.yaml  react.html  tsconfig.json  tsconfig.react.json  vite.config.ts  vitest.config.ts
.claude/skills/backend/: SKILL.md
docs/: frontend-improvement-plan.md
src/: main.ts  main.tsx
src-react/: main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs
src-tauri/src/commands/: cookies.rs  download.rs  mod.rs  setup.rs
src-tauri/src/core/: fsx.rs  mod.rs  models.rs  paths.rs  process.rs  ytdlp.rs
src-tauri/src/features/: mod.rs
src-tauri/src/features/download/: commands.rs  models.rs  service.rs
src-tauri/src/features/preview/: commands.rs  models.rs  service.rs
src-tauri/src/features/session/: commands.rs  mod.rs  models.rs  service.rs  webview.rs
src-tauri/src/features/settings/: commands.rs  models.rs  service.rs
src-tauri/src/features/setup/: commands.rs  models.rs  service.rs
src-tauri/src/models/: types.rs
src-tauri/src/services/: config_service.rs  cookie_service.rs  download_service.rs  mod.rs  setup_service.rs
src/app/: icons.ts  router.ts  shell.ts  theme.ts
src/components/: cookie-panel.ts  download-panel.ts  modal.ts  progress-bar.ts  setup-screen.ts
src/core/: i18n.ts  theme.ts
src/services/: tauri-api.ts
src/shared/lib/: html.ts  (+7 more)
src/styles/: app.css  stash.css
src/types/: index.ts
(+354 files in other folders)
