[package]
name = "youtube-downloader"
version = "1.0.1"
edition = "2021"

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
tauri-plugin-shell = "2"
tauri-plugin-fs = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", features = ["blocking"] }
sha1 = "0.10"
zip = "2"
cookie = "0.18"
trash = "5"
base64 = "0.22"

[build-dependencies]
tauri-build = { version = "2", features = [] }
